Updated chessboard creation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 node_modules
 chess-frontend/node_modules
+chess-backend/dist
+chess-backend/dist/chess.js
+chess-backend/dist/Pieces.js
+chess-backend/dist/types.js
