--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"chess": "cd chess && ts-node chess.ts",
+		"tsc": "cd chess && tsc"
 	},
 	"dependencies": {
 		"@types/node": "18.11.9",
@@ -15,6 +17,12 @@
 		"next": "13.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"readline": "^1.3.0",
 		"typescript": "4.8.4"
+	},
+	"devDependencies": {
+		"@swc/core": "^1.3.19",
+		"@swc/helpers": "^0.4.14",
+		"regenerator-runtime": "^0.13.11"
 	}
 }
