--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"frontend": "cd chess-frontend && npm run dev",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"pocketbase": "cd chess-frontend && ./pocketbase serve"
+		"pocketbase": "cd chess-frontend && ./pocketbase serve",
+		"chess": "cd chess && ts-node chess.ts",
+		"tsc": "cd chess && tsc"
 	},
 	"author": "Kristjan Rajaniemi",
 	"license": "ISC",
@@ -14,6 +16,8 @@
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
-		"typescript": "^4.8.4"
+		"typescript": "^4.8.4",
+		"@swc/core": "^1.3.19",
+		"@swc/helpers": "^0.4.14"
 	}
 }
