--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"pocketbase": "cd chess-frontend && ./pocketbase serve",
 		"chess": "cd chess && ts-node index.ts",
-		"tsc": "cd chess && tsc"
+		"tsc": "cd chess && tsc",
+		"js": "cd chess && cd dist && node index.js"
 	},
 	"author": "Kristjan Rajaniemi",
 	"license": "ISC",
 	"dependencies": {
+		"eslint": "^8.30.0",
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
-		"typescript": "^4.8.4",
 		"@swc/core": "^1.3.19",
-		"@swc/helpers": "^0.4.14"
+		"@swc/helpers": "^0.4.14",
+		"typescript": "^4.8.4"
 	}
 }
