--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"frontend": "cd frontend && npm run dev",
-		"test": "jest",
+		"test": "jest --verbose --silent",
 		"pocketbase": "cd chess-frontend && ./pocketbase serve",
 		"chess": "cd backend && ts-node ./chess/index.ts",
 		"tsc": "cd backend && tsc",
