--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"installfront": "cd frontend 6& npm i",
 		"test": "jest --verbose --silent",
 		"pocketbase": "cd chess-frontend && ./pocketbase serve",
-		"chess": "cd backend && ts-node ./chess/index.ts",
-		"tsc": "cd backend && tsc",
-		"js": "cd backend && cd dist && cd chess && node index.js",
+		"chess": "cd src && cd backend && ts-node ./chess/index.ts",
+		"tsc": "cd src/backend && tsc",
+		"js": "cd src && cd backend && cd dist && cd backend && cd chess &&  node index.js",
 		"lines": "count-lines-of-code",
-		"front": "cd frontend && npm run dev",
+		"front": "cd src && cd frontend && npm run dev",
 		"backend": "cd backend && cd server && ts-node-dev index.ts"
 	},
 	"author": "Kristjan Rajaniemi",
@@ -35,6 +35,6 @@
 		"jest": "^29.3.1",
 		"ts-jest": "^29.0.3",
 		"ts-node-dev": "^2.0.0",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.5"
 	}
 }
