--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"ts-node": {
-		"swc": false
+		"swc": true
 	},
 	"compilerOptions": {
 		/* Visit https://aka.ms/tsconfig to read more about this file */
