--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-	"name": "chess",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"frontend": "cd frontend && npm run dev",
-		"installfront": "cd frontend 6& npm i",
-		"test3": "jest --verbose --silent",
-		"test": "jest",
-		"test2": "jest --verbose",
-		"pocketbase": "cd chess-frontend && ./pocketbase serve",
-		"chess": "cd src && cd backend && ts-node ./chess/index.ts",
-		"tsc": "cd src/backend && tsc",
-		"js": "cd src && cd backend && cd dist && cd backend && cd chess &&  node index.js",
-		"lines": "count-lines-of-code",
-		"front": "cd src && cd frontend && npm run dev",
-		"backend": "cd backend && cd server && ts-node-dev index.ts"
-	},
-	"author": "Kristjan Rajaniemi",
-	"license": "ISC",
-	"dependencies": {
-		"express": "^4.18.2",
-		"flatted": "^3.2.7",
-		"ts-node": "^10.9.1"
-	},
-	"devDependencies": {
-		"@jest/globals": "^29.3.1",
-		"@swc/core": "^1.3.19",
-		"@swc/helpers": "^0.4.14",
-		"@types/express": "^4.17.15",
-		"@types/jest": "^29.2.5",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.48.1",
-		"@typescript-eslint/parser": "^5.48.1",
-		"eslint": "^8.31.0",
-		"jest": "^29.3.1",
-		"ts-jest": "^29.0.3",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.0.4"
-	}
+  "name": "chess",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "frontend": "cd frontend && npm run dev",
+    "installfront": "cd frontend 6& npm i",
+    "test3": "jest --verbose --silent",
+    "test": "jest",
+    "test2": "jest --verbose",
+    "pocketbase": "cd chess-frontend && ./pocketbase serve",
+    "chess": "cd src && cd backend && ts-node ./chess/index.ts",
+    "tsc": "cd src/backend && tsc",
+    "js": "cd src && cd backend && cd dist && cd backend && cd chess &&  node index.js",
+    "lines": "count-lines-of-code",
+    "front": "cd src && cd frontend && npm run dev",
+    "backend": "cd backend && cd server && ts-node-dev index.ts",
+    "lint": ""
+  },
+  "author": "Kristjan Rajaniemi",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "flatted": "^3.2.7",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.3.1",
+    "@swc/core": "^1.3.19",
+    "@swc/helpers": "^0.4.14",
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.4"
+  }
 }
