--- a/chess-app/package.json
+++ b/chess-app/package.json
@@ -13,25 +13,29 @@
     "test": "jest",
     "test2": "jest --verbose",
     "pocketbase": "cd chess-frontend && ./pocketbase serve",
-    "chess": "cd src && cd backend && ts-node ./chess/index.ts",
+    "chess": "cd src && cd chess && ts-node index.ts",
     "tsc": "cd src/backend && tsc",
     "js": "cd src && cd backend && cd dist && cd backend && cd chess &&  node index.js",
     "lines": "count-lines-of-code",
-    "front": "cd src && cd frontend && npm run dev",
-    "backend": "cd backend && cd server && ts-node-dev index.ts"
+    "front": "cd src && cd frontend && npm run dev"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
+    "flatted": "^3.2.7",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.21.4",
-    "flatted": "^3.2.7",
-    "ts-node": "^10.9.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.57",
+    "@swc/jest": "^0.2.26",
     "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.16.6",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -40,15 +44,14 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.4.1",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.0",
-    "@jest/globals": "^29.3.1",
-    "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.5",
-    "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
