--- a/chess-app/tsconfig.json
+++ b/chess-app/tsconfig.json
@@ -12,13 +12,15 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noUnusedLocals": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
@@ -30,7 +32,8 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
+    "src/chess/.game.ts"
   ],
   "exclude": ["node_modules"]
 }
