--- a/chess-app/tsconfig.json
+++ b/chess-app/tsconfig.json
@@ -4,7 +4,7 @@
   },
   "compilerOptions": {
     "target": "es2017",
-    // "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
@@ -30,7 +30,8 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
+    "src/chess/.game.ts"
   ],
   "exclude": ["node_modules"]
 }
