Cannot move to a check working and tested properly, swcjest added

--- a/chess-app/src/chess/tsconfig.json
+++ b/chess-app/src/chess/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "ts-node": {
     "swc": true
-  },
-  "compilerOptions": {
-    "module": "CommonJS"
   }
+  // "compilerOptions": {
+  //   "module": "CommonJS"
+  // }
 }
