--- a/chess-app/package.json
+++ b/chess-app/package.json
@@ -17,7 +17,8 @@
     "tsc": "cd src/backend && tsc",
     "js": "cd src && cd backend && cd dist && cd backend && cd chess &&  node index.js",
     "lines": "count-lines-of-code",
-    "front": "cd src && cd frontend && npm run dev"
+    "front": "cd src && cd frontend && npm run dev",
+    "lighthouse": "npx unlighthouse --site https://chess-app-eta.vercel.app"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
